# dotfiles

./: .gitattributes  .gitignore  .gitleaks.toml  .sops.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  HUMANIZER_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  config.sh  deploy.sh  install.sh  install_zsh_local.sh
.claude/: context.yaml  hookify.block-find-exec.md  settings.json  settings.local.json
claude/: .gitignore  CLAUDE.md  ai-safety-plugins  ai_automation.sh  file-suggestion.sh  history.jsonl.archive.1770068664  history.jsonl.archive.1770068795  hookify.block-stash-drop.md  hookify.block-tab-group-creation.md  hookify.nudge-sandbox-git.local.md  hookify.verify-git-remote.md  local-marketplace  mcp-needs-auth-cache.json  notify.sh  policy-limits.json  remote-settings.json  settings.json  statusline.sh
codex/: .gitignore  AGENTS.md  config.toml  state_5.sqlite  superpowers
config/: Brewfile  ai_automation.sh  aliases.sh  aliases_inspect.sh  apps.conf  atuin.toml  curlrc  (+49 more)
tools/claude-tools/: Cargo.toml  SHA256SUMS
tools/claude-tools/src/: check_git_root.rs  context_apply.rs  main.rs  resolve_file_path.rs  setup.rs  statusline.rs  timezone.rs  usage.rs  util.rs
tools/claude-tools/src/context/: builder.rs  display.rs  mod.rs  profiles.rs  registry.rs  settings.rs  sync.rs
tools/claude-tools/src/context/tui/: mod.rs  state.rs  theme.rs
tools/claude-tools/src/ignore/: managed.rs  mod.rs  patterns.rs
tools/claude-tools/src/ignore/tui/: mod.rs  state.rs
tools/claude-tools/src/select/: mod.rs  state.rs
(+2064 files in other folders)
