[package]
name = "claude-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

[profile.release]
opt-level = "s"
strip = true
